# resolume-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
examples/: basic_connection.py  fade_and_switch.py
resolume_mcp/: behaviors.py  client.py  code_server.py  config.py  snapshots.py  tools_server.py
resolume_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_behaviors.py  test_client.py  test_snapshots.py
