[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resolume-mcp"
version = "0.1.0"
description = "MCP server for AI agents to control Resolume Avenue/Arena via WebSocket"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "websockets>=13.0",
]

[project.scripts]
resolume-mcp-code = "resolume_mcp.code_server:main_cli"
